[project]
name = "agent"
version = "0.1.0"
description = "LangChain CLI Agent with Claude"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore>=0.1.1",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-community>=0.0.20",
    "python-dotenv>=1.0.0",
    "anthropic>=0.25.0",
    "prompt-toolkit>=3.0.51",
]
